--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,5 +1,4 @@
 server:
-  port: 9006
   servlet:
     context-path: /${spring.application.name}
 
@@ -8,29 +7,31 @@ spring:
     active: dev
   application:
     name: sa-token
+  config:
+    location: classpath:bootstrap_${spring.profiles.active}.yml
 
-  # redis配置
-  redis:
-    # Redis数据库索引（默认为0）
-    database: 1
-    # Redis服务器地址
-    host: 127.0.0.1
-    # Redis服务器连接端口
-    port: 6379
-    # Redis服务器连接密码（默认为空）
-    # password:
-    # 连接超时时间
-    timeout: 10s
-    lettuce:
-      pool:
-        # 连接池最大连接数
-        max-active: 200
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: -1ms
-        # 连接池中的最大空闲连接
-        max-idle: 10
-        # 连接池中的最小空闲连接
-        min-idle: 0
+#  # redis配置
+#  redis:
+#    # Redis数据库索引（默认为0）
+#    database: 1
+#    # Redis服务器地址
+#    host: 127.0.0.1
+#    # Redis服务器连接端口
+#    port: 6379
+#    # Redis服务器连接密码（默认为空）
+#    # password:
+#    # 连接超时时间
+#    timeout: 10s
+#    lettuce:
+#      pool:
+#        # 连接池最大连接数
+#        max-active: 200
+#        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+#        max-wait: -1ms
+#        # 连接池中的最大空闲连接
+#        max-idle: 10
+#        # 连接池中的最小空闲连接
+#        min-idle: 0
 
 ############## Sa-Token 配置 (文档: https://sa-token.cc) ##############
 sa-token:
@@ -48,3 +49,12 @@ sa-token:
   token-style: simple-uuid
   # 是否输出操作日志
   is-log: true
+
+eureka:
+  instance:
+    hostname: 127.0.0.1
+    prefer-ip-address: false #以IP地址注册到服务中心，相互注册使用IP地址
+    instance-id: ${spring.application.name}:${server.port}
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:10086/eureka
