--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,10 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>cn.dev33</groupId>-->
-<!--            <artifactId>sa-token-redis</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
